# replay-parser-gui

./: LICENSE  README.md  angular.json  index.html  karma.conf.js  package-lock.json  package.json  prettier.config.js
src/: index.html  main.ts  types.ts
src-tauri/: 3v3.rec  Cargo.toml  tauri.conf.json  warnings.txt  warnings2.txt  warnings3.txt  warnings_with_observer.txt
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: error.rs  game.rs  logfile.rs  mod.rs  player_info.rs  replay_reporter_dto.rs
src-tauri/test/Documents/My Games/Dawn of War II - Retribution/Logfiles/: warnings.txt
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts
src/app/core/components/navbar/: navbar.component.ts
src/app/core/services/: tauri.service.ts  update.service.ts
src/app/features/match-list/: match-list-routing.module.ts  match-list.component.html  match-list.component.ts  match-list.module.ts
src/app/features/match-list/match-list-table/: actions.renderer.ts  delete.renderer.ts  details.renderer.ts  match-details.component.ts  match-list-table.component.css  match-list-table.component.html  match-list-table.component.spec.ts  match-list-table.component.ts
src/app/features/match-list/match-list-table/details-cell/: details-cell.component.ts
src/app/features/match-list/match-list-table/map-cell/: map-cell.component.html  map-cell.component.spec.ts  map-cell.component.ts
src/app/features/match-list/match-list-table/players-cell/: players-cell.component.html  players-cell.component.spec.ts  players-cell.component.ts
src/app/features/match-list/match-list-table/status-cell/: status-cell.component.ts
