[package]
name = "replay-parser-gui"
version = "1.0.3"
description = "Reports game replays to Elite Mod server"
authors = ["Adeptus Noobus"]
license = "MIT"
repository = "https://github.com/markonyango/replay-parser-gui"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
regex = "1.7.0"
color-eyre = "0.6.2"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.11"
lazy_static = "1.4.0"
thiserror = "1.0.37"
notify = "5.0.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
notify-debouncer-mini = "0.2.1"
base64 = "0.13.1"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"

[dependencies.parser_lib]
git = "https://github.com/dowmechanicus/ReplayParser"
branch = "main"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
